[package]
name = "nu_php"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.48"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-util = "0.7.8"
url = "2.4.1"
dashmap = "5.5.3"
http =  "0.2.9"
rand = { version = "0.8.5", features = ["getrandom"] }
multer = "2.1.0"
tempfile = "3.8.0"
